hbs private area and account-settings and route files games  and gamesdetails

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,12 +2,10 @@
 <p>Welcome to {{title}}</p>
 <h2>This is where you want to go:</h2>
 <p>
-    <button><a href="/private-page">Your account</a></button>
+  <button><a href="/private">Your account</a></button>
   <button><a href="/signup">Create account</a></button>
 </p>
-  <button><a href="/login">Log In</a></button>
-  <button>
-      <a href="/auth/slack">Login With Slack</a>
-  </button>
-
-
+<button><a href="/login">Log In</a></button>
+<button>
+  <a href="/auth/slack">Login With Slack</a>
+</button>
