--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,4 +6,5 @@
   <button><a href="/signup">Create account</a></button>
 </p>
   <button><a href="/login">Log In</a></button>
+  <button><a href="/auth/github">Login With Github</a></button>
 
