--- a/views/private.hbs
+++ b/views/private.hbs
@@ -7,7 +7,7 @@
 </p>
 <button><a href="/login">Log In</a></button>
 <button>
-  <a href="/auth/slack">Login With Slack</a>
+  <a href="/auth/github">Login With Github</a>
 </button>
 
 Private page
