--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,19 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{this.title}}
+
+
+{{#with gamesList}}
+<p>{{title}}</p>
+{{/with}}
+
+{{#each gamesList}}
+{{this.title}}
+{{/each}}
+
+
 <h2>This is where you want to go:</h2>
 <p>
   <button><a href="/private">Your account</a></button>
   <button><a href="/signup">Create account</a></button>
 </p>
-  <button><a href="/login">Log In</a></button>
-  <button><a href="/auth/github">Login With Github</a></button>
-
+<button><a href="/login">Log In</a></button>
+<button><a href="/auth/github">Login With Github</a></button>
