--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,15 @@
 body {
-  padding: 50px;
+  padding: 0px;
+  margin: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
-a {
-  color: #00B7FF; }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #29a744;
+    font-size: smaller;
+  }
+
 
 /*# sourceMappingURL=style.css.map */
