--- a/views/account-settings.hbs
+++ b/views/account-settings.hbs
@@ -1,9 +1,14 @@
-<h1>Edit your Profile</h1>
-<ul>
-  <li>
-    Username
-  </li>
-  <li>
-    Foto
-  </li>
-</ul>
+<div>
+
+  <h2>Edit your Profile</h1>
+
+    <p>
+      Edit your Name
+    </p>
+
+    <p>
+      <a href="games/addGame"> Add your Game</a>
+
+    </p>
+
+</div>
