--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,8 @@
 body {
-  padding: 0px;
-  margin: 0px;
+  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
-  footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #29a744;
-    font-size: smaller;
-  }
-
+a {
+  color: #00B7FF; }
 
 /*# sourceMappingURL=style.css.map */
