navbar update: when logged in, the user will only see the logout button. Login/Logout/Signup buttons are working

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,4 +9,10 @@ footer {
   align-content: center;
   font-size: smaller; }
 
+#logout {
+  display: none; }
+
+#login, #signup {
+  display: block; }
+
 /*# sourceMappingURL=style.css.map */
