--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -46,23 +46,28 @@
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a> --}}
+          <a class="dropdown-item" href="#">Something else here</a>
 
           
         </div>
-      {{!-- </li> --}}
+      </li> --}}
     </ul>
 
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-      <div class="btn-group mr-2" role="group" aria-label="First group">
-        <button type="button" class="btn btn-secondary" href="#">Sign Up</button>
+      <div class="btn-group mr-2" role="group" aria-label="First group" id="signup">
+        <a href="/signup"><button type="button" class="btn btn-secondary">Sign Up</button></a>
       </div>
-      <div class="btn-group mr-2" role="group" aria-label="Second group">
-        <button type="button" class="btn btn-outline-light" href="#">Login</button> 
-        {{!-- another option is to use the class from the Sign up botton --}}
+      <div class="btn-group mr-2" role="group" aria-label="Second group" id="login">
+        <a href="/login"><button type="button" class="btn btn-outline-light">Login</button></a> 
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="Second group" id="logout">
+        <a href="/logout"><button type="button" class="btn btn-outline-light">Logout</button></a> 
       </div>
     </div>
 
+
+    
+      
 
   </div>
 </nav>
@@ -74,11 +79,16 @@
   
 
 
+{{!-- <div>
+    {{userHelper ../req.user}}
+</div> --}}
+
 
 <footer>
     <div>Ironhack WebDev Project March/2020</div>
 </footer>
-
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js'></script>
+  <script src="/javascripts/checkIfLoggedIn.js"></script>
   <script src="/javascripts/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
