image shows up and footer

--- a/views/gameDetail.hbs
+++ b/views/gameDetail.hbs
@@ -5,7 +5,7 @@
   <li>Author: {{game.author}}</li>
   <li>Bootcamp: {{game.bootcamp}}</li>
   <li>Description: {{game.description}}</li>
-  <li><img src="{{gameScreenshot}}" alt="screenshot"></li>
+  <li><img src="{{game.imgPath}}" alt="screenshot"></li>
   <li>Rating: {{game.rating}}</li>
   <li><a href="">Rate this Game</a></li>
 </ul>
