--- a/views/partials/gameCard.hbs
+++ b/views/partials/gameCard.hbs
@@ -23,7 +23,7 @@
   </p>
 
   <p>
-    <img src="https://gph.is/29r4wma" alt="screenshot">
+    <img src="{{this.imgPath}}" alt="screenshot">
   </p>
 
 </div>
