--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,4 +15,24 @@ footer {
 #login, #signup {
   display: block; }
 
+.form-group {
+  width: 300px; }
+
+.error-message {
+  color: red;
+  font-size: smaller; }
+
+.login-page, .signup-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10vw 0px; }
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto; }
+
 /*# sourceMappingURL=style.css.map */
