--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,7 +1,34 @@
-<h1>Login Page</h1>
+<div class="login-page">
+
+  <h1>Login Page</h1>
 
 
-<form action="/login" method="POST">
+  <form action="/login" method="POST" class="form-signin">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" name="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+    </div>
+    {{#if message}}
+    <div class="error-message">{{message}}</div>
+    {{/if}}
+    <br>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+  <br>
+  <p class="create-account-message">
+        Do you want to create an account?
+      <a href="/signup">Create account</a>
+  </p>
+  
+</div>
+
+
+
+{{!-- <form action="/login" method="POST">
   <div>
     <label for="username">Username:</label>
     <input type="text" name="username">
@@ -26,22 +53,4 @@
 
   <p class="link-back-home">
     <a href="/">Go back Home</a>
-  </p>
-
-{{!-- 
-<form>
-  <div class="form-group">
-    <label for="username">Username</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form> --}}
+  </p> --}}
