--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,7 +1,34 @@
 <!-- views/auth/signup.hbs -->
-<h2>Create Your Account</h2>
+<div class="signup-page">
 
-<form action="/signup" method="POST" id="form-container">
+  <h2>Create Your Account</h2>
+
+    <form action="/login" method="POST">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" name="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+        <small id="passwordHelpInline" class="text-muted">
+          Must be at least 8 characters long
+        </small>
+      </div>
+      {{#if message}}
+        <div class="error-message">{{message}}</div>
+      {{/if}}
+      <br>
+      <button type="submit" class="btn btn-primary">Create Account</button>
+    </form>
+    <br>
+    <p class="account-message">
+        Do you already have an account?
+        <a href="/login">Login</a>
+    </p>
+</div>
+
+{{!-- <form action="/signup" method="POST" id="form-container">
   <label for="username">Username</label>
   <input id="username" type="text" name="username" placeholder="Your Username">
   <br><br>
@@ -23,4 +50,4 @@
 
   <p class="link-back-home">
     <a href="/">Go back Home</a>
-  </p>
+  </p> --}}
