--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -3,7 +3,7 @@
 
   <h2>Create Your Account</h2>
 
-    <form action="/login" method="POST">
+    <form action="/signup" method="POST">
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" name="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
