--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -16,7 +16,9 @@
     <div class="error-message">{{message}}</div>
     {{/if}}
     <br>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-dark">Login</button>
+    <br>
+    <button type="submit" class="btn btn-dark"><img class="github-btn" src="../../public/images/github.png"><a style="text-decoration:none" href="/auth/github">Sign in with Github</a></button>
   </form>
   <br>
   <p class="create-account-message">
