--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,19 +38,21 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Events</a>
       </li>
-      {{!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+      <li class="nav-item dropdown">
+        <a id="my-account" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          My Account
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item"  href="/private">My Account</a>
+          <a class="dropdown-item"  href="/account-settings">Edit Profile</a>
+          <a class="dropdown-item" href="#">My Games</a>
+          <a class="dropdown-item" href="#">My Favorite Games</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Add a New Game</a>
 
           
         </div>
-      </li> --}}
+      </li>
     </ul>
 
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
@@ -64,10 +66,6 @@
         <a href="/logout"><button type="button" class="btn btn-outline-light">Logout</button></a> 
       </div>
     </div>
-
-
-    
-      
 
   </div>
 </nav>
