--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@ footer {
   align-content: center;
   font-size: smaller; }
 
-#logout {
+#logout, #my-account {
   display: none; }
 
 #login, #signup {
@@ -34,5 +34,9 @@ footer {
   max-width: 330px;
   padding: 15px;
   margin: auto; }
+
+.btn {
+  display: block;
+  width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
