--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -19,7 +19,7 @@
         <div class="error-message">{{message}}</div>
       {{/if}}
       <br>
-      <button type="submit" class="btn btn-primary">Create Account</button>
+      <button type="submit" class="btn btn-dark">Create Account</button>
     </form>
     <br>
     <p class="account-message">
