--- a/views/private.hbs
+++ b/views/private.hbs
@@ -1,4 +1,4 @@
-<h1>Hi {{user.username}} ! You are logged in</h1>
+<h1>Hi, {{user.username}}! You are logged in.</h1>
 
 <h2>Where do you want to go ?</h2>
 <p>
