--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
       {{!-- <div class="input-group mb-3"> --}}
         <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+          <button class="btn btn-secondary" type="button" id="button-addon2">Search</button>
         </div>
       {{!-- </div> --}}
     </form>
@@ -33,7 +33,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Games</a>
+        <a class="nav-link" href="/gameDetail">Games</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Events</a>
@@ -84,7 +84,7 @@
     <div>Ironhack WebDev Project March/2020</div>
 </footer>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js'></script>
-  <script src="/javascripts/checkIfLoggedIn.js"></script>
+  <script src="/javascripts/check-if-logged-in.js"></script>
   <script src="/javascripts/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
