finished search feature

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,3 +49,8 @@
 {{#each gamesList}}
 {{this.title}}
 {{/each}}
+
+{{!-- This is another method to display only the found games --}}
+{{!-- {{#each searchedGames}} --}}
+{{!-- {{this.title}} --}}
+{{!-- {{/each}} --}}
