--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,16 +13,16 @@
 
 <body>
   {{!-- NAVBAR --}}
-  
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Ironhack Games</a>
-  <form class="form-inline my-2 my-lg-0">
+  <form class="form-inline my-2 my-lg-0" method="POST" action="/search-bar-handler">
       {{!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> --}}
       {{!-- <div class="input-group mb-3"> --}}
-        <input type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
+        <input type="search" name="searchBar" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
         <div class="input-group-append">
-          <button class="btn btn-secondary" type="button" id="button-addon2">Search</button>
+          <button class="btn btn-secondary" type="submit" id="button-addon2">Search</button>
         </div>
       {{!-- </div> --}}
     </form>
@@ -53,7 +53,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Add a New Game</a>
 
-          
+
         </div>
       </li>
     </ul>
@@ -63,10 +63,10 @@
         <a href="/signup"><button type="button" class="btn btn-secondary">Sign Up</button></a>
       </div>
       <div class="btn-group mr-2" role="group" aria-label="Second group" id="login">
-        <a href="/login"><button type="button" class="btn btn-outline-light">Login</button></a> 
+        <a href="/login"><button type="button" class="btn btn-outline-light">Login</button></a>
       </div>
       <div class="btn-group mr-2" role="group" aria-label="Second group" id="logout">
-        <a href="/logout"><button type="button" class="btn btn-outline-light">Logout</button></a> 
+        <a href="/logout"><button type="button" class="btn btn-outline-light">Logout</button></a>
       </div>
     </div>
 
