--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,9 @@
 <div class="index-page">
   <h2 class="index-h2">Welcome to the Games World of Ironhack</h2>
-  <p class="index-text">Here you're gonna check out the game projects from your collegues and previous students of the Web Development Bootcamp</p>
+  <p class="index-text">Here you're gonna check out the game projects from your collegues and previous students of the
+    Web Development Bootcamp</p>
 
-  {{this.title}}
+
 
   {{!-- CAROUSEL --}}
   <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -47,5 +48,5 @@
 </div>
 
 {{#each gamesList}}
-{{this.title}}
+{{>gameCard this}}
 {{/each}}
