--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -51,7 +51,7 @@
           <a class="dropdown-item" href="#">My Games</a>
           <a class="dropdown-item" href="#">My Favorite Games</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Add a New Game</a>
+          <a class="dropdown-item" href="/addGame">Add a New Game</a>
 
           
         </div>
@@ -74,15 +74,15 @@
 </nav>
 {{!-- NAVBAR END --}}
 
-
+<div id="main-wrapper">
   {{{body}}}
-
+</div>
 
 
 
 
   <footer>
-    <div>Ironhack WebDev Project March/2020 | Webmasters: Marcia Furtado, Sam Benhassine, Benjamin Chimoy </div>
+    <div>Ironhack WebDev Project March/2020 | Webmasters: Benjamin Chimoy, Marcia Furtado, Sam Benhassine  </div>
   </footer>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js'></script>
