--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,12 +7,16 @@ footer {
   display: flex;
   justify-content: center;
   align-content: center;
-  font-size: smaller; }
+  font-size: smaller;
+  color: white;
+  background-color: #343a40; }
 
-#logout, #my-account {
+#logout,
+#my-account {
   display: none; }
 
-#login, #signup {
+#login,
+#signup {
   display: block; }
 
 .form-group {
@@ -22,7 +26,8 @@ footer {
   color: red;
   font-size: smaller; }
 
-.login-page, .signup-page {
+.login-page,
+.signup-page {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -35,12 +40,35 @@ footer {
   padding: 15px;
   margin: auto; }
 
-.btn {
+.btn-login,
+.btn-signup {
   display: block;
   width: 100%; }
 
+.github-btn {
+  text-decoration: none;
+  color: white;
+  width: 10%; }
+
+.github-btn:hover {
+  text-decoration: none;
+  color: white; }
+
+.index-games-list {
+  display: flex;
+  flex-wrap: wrap;
+  place-content: space-around; }
+
 .index-page {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px; }
+
+.index-text {
+  margin-top: 10px; }
+
+#main-wrapper {
+  min-height: 90vh; }
 
 /*# sourceMappingURL=style.css.map */
