--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -16,9 +16,9 @@
     <div class="error-message">{{message}}</div>
     {{/if}}
     <br>
-    <button type="submit" class="btn btn-dark">Login</button>
+    <button type="submit" class="btn btn-dark btn-login">Login</button>
     <br>
-    <button type="submit" class="btn btn-dark"><img class="github-btn" src="../../public/images/github.png"><a style="text-decoration:none" href="/auth/github">Sign in with Github</a></button>
+    <button type="submit" class="btn btn-dark btn-login"><img class="github-btn" src="/images/github-silhouette.png"><a class="github-btn" href="/auth/github">Sign in with Github</a></button>
   </form>
   <br>
   <p class="create-account-message">
@@ -27,32 +27,3 @@
   </p>
   
 </div>
-
-
-
-{{!-- <form action="/login" method="POST">
-  <div>
-    <label for="username">Username:</label>
-    <input type="text" name="username">
-  </div>
-  <br>
-  <div>
-    <label for="password">Password:</label>
-    <input type="password" name="password">
-  </div>
-  {{#if message}}
-  <div class="error-message">{{message}}</div>
-  {{/if}}
-  <br>
-  <div>
-    <input type="submit" value="Log In">
-  </div>
-  <p class="create-account-message">
-      Do you want to create an account?
-    <a href="/signup">Create account</a>
-  </p>
-</form>
-
-  <p class="link-back-home">
-    <a href="/">Go back Home</a>
-  </p> --}}
