--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -19,7 +19,7 @@
         <div class="error-message">{{message}}</div>
       {{/if}}
       <br>
-      <button type="submit" class="btn btn-dark">Create Account</button>
+      <button type="submit" class="btn btn-dark btn-signup">Create Account</button>
     </form>
     <br>
     <p class="account-message">
@@ -27,27 +27,3 @@
         <a href="/login">Login</a>
     </p>
 </div>
-
-{{!-- <form action="/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="Your Username">
-  <br><br>
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your Password">
-
-  {{#if message}}
-    <div class="error-message">{{ message }}</div>
-  {{/if}}
-  <br><br>
-
-  <button>Create account</button>
-
-  <p class="account-message">
-    Do you already have an account?
-    <a href="/login">Login</a>
-  </p>
-</form>
-
-  <p class="link-back-home">
-    <a href="/">Go back Home</a>
-  </p> --}}
