--- a/views/private.hbs
+++ b/views/private.hbs
@@ -1,22 +1,10 @@
-<h1>Hi, {{user.username}}! You are logged in.</h1>
-
-<h2>Where do you want to go ?</h2>
-<p>
-  <button><a href="/account-settings">Your account</a></button>
-  <button><a href="/signup">Create account</a></button>
-</p>
-<button><a href="/login">Log In</a></button>
-<button>
-  <a href="/auth/github">Login With Github</a>
-</button>
-
-
 {{#if user}}
-<div>
-  <a href="/">Index</a>
+<div class="private-page">
+  <h1>Welcome, {{user.username}}!</h1>
+
+
+  <a href="/addGame">Upload my Game</a>
+  
 </div>
 {{/if}}
 
-<p class="link-logout">
-  <a href="/logout">Log out</a>
-</p>
