home page pretty much done

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -16,13 +16,13 @@
     <div class="error-message">{{message}}</div>
     {{/if}}
     <br>
-    <button type="submit" class="btn btn-dark btn-login">Login</button>
+    <button type="submit" class="btn btn-secondary btn-login">Login</button>
     <br>
-    <button type="submit" class="btn btn-dark btn-login"><img class="github-btn" src="/images/github-silhouette.png"><a class="github-btn" href="/auth/github">Sign in with Github</a></button>
+    <button type="submit" class="btn btn-secondary btn-login"><img class="github-btn" src="/images/github-silhouette.png"><a class="github-btn" href="/auth/github">Sign in with Github</a></button>
   </form>
   <br>
   <p class="create-account-message">
-        Do you want to create an account?
+        Don't have an account yet?
       <a href="/signup">Create account</a>
   </p>
   
