--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,21 @@
 body {
-  margin: 0px;
+  margin: 90px 0px 0px;
   padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 footer {
+  height: 3vh;
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   font-size: smaller;
   color: white;
   background-color: #343a40; }
 
-#logout,
-#my-account {
+#logout, #my-account {
   display: none; }
 
-#login,
-#signup {
+#login, #signup {
   display: block; }
 
 .form-group {
@@ -26,8 +25,7 @@ footer {
   color: red;
   font-size: smaller; }
 
-.login-page,
-.signup-page {
+.login-page, .signup-page {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -40,8 +38,7 @@ footer {
   padding: 15px;
   margin: auto; }
 
-.btn-login,
-.btn-signup {
+.btn-login, .btn-signup {
   display: block;
   width: 100%; }
 
@@ -57,18 +54,50 @@ footer {
 .index-games-list {
   display: flex;
   flex-wrap: wrap;
-  place-content: space-around; }
+  place-content: space-around;
+  margin: 50px 50px 0px; }
 
 .index-page {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-top: 30px; }
+  align-items: center; }
 
 .index-text {
   margin-top: 10px; }
 
+.card-distance {
+  margin: 0px 0px 50px; }
+
 #main-wrapper {
   min-height: 90vh; }
+
+.carousel-height {
+  height: 60vh; }
+
+#carouselExampleCaptions img {
+  height: 60vh;
+  width: 100%; }
+
+#carouselExampleCaptions {
+  width: 90vw; }
+
+.card-size {
+  height: 100%; }
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; }
+
+.card-body a {
+  align-self: flex-end; }
+
+.card-body img {
+  width: 100%;
+  height: 20vh;
+  object-fit: cover; }
+
+.background-blue {
+  background-color: #2dc5fa; }
 
 /*# sourceMappingURL=style.css.map */
