--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,25 +1,24 @@
 body {
-  margin: 0px;
+  margin: 90px 0px 0px;
   padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 footer {
+  height: 3vh;
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   font-size: smaller;
   color: white;
   background-color: #343a40;
 }
 
-#logout,
-#my-account {
+#logout, #my-account {
   display: none;
 }
 
-#login,
-#signup {
+#login, #signup {
   display: block;
 }
 
@@ -32,8 +31,7 @@ footer {
   font-size: smaller;
 }
 
-.login-page,
-.signup-page {
+.login-page, .signup-page {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -48,8 +46,7 @@ footer {
   margin: auto;
 }
 
-.btn-login,
-.btn-signup {
+.btn-login, .btn-signup {
   display: block;
   width: 100%;
 }
@@ -65,23 +62,84 @@ footer {
   color: white;
 }
 
+// .btn-secondary:hover {
+//   background-color: rgb(125, 217, 584) !important;
+//   border-color: white !important;
+// }
+
+// .btn-secondary {
+//   background-color:rgb(45, 147, 190) !important;
+//   border-color: black !important;
+// }
+
+// .btn-primary {
+//   background-color: rgb(45, 197, 250) !important;
+//   border-color: white !important;
+// }
+
+// .btn-primary:hover {
+//   background-color: white;
+// }
+
 .index-games-list {
   display: flex;
   flex-wrap: wrap;
   place-content: space-around;
+  margin: 50px 50px 0px
 }
 
 .index-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 30px;
+  
 }
 
 .index-text {
   margin-top: 10px;
 }
 
+.card-distance {
+  margin: 0px 0px 50px;
+}
+
 #main-wrapper {
   min-height: 90vh;
+}
+
+.carousel-height {
+  height: 60vh;
+}
+
+#carouselExampleCaptions img {
+  height: 60vh;
+  width: 100%;
+}
+
+#carouselExampleCaptions {
+  width: 90vw;
+}
+
+.card-size {
+  height: 100%;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.card-body a {
+  align-self: flex-end;
+}
+
+.card-body img {
+  width: 100%;
+  height: 20vh;
+  object-fit: cover;
+}
+
+.background-blue {
+  background-color: rgb(45, 197, 250);
 }
