--- a/views/addGame.hbs
+++ b/views/addGame.hbs
@@ -48,3 +48,21 @@
 
 
 </div>
+{{!-- 
+<form id="form" action="/" method="POST" enctype="multipart/form-data" class="form-signin">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" name="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+    </div>
+    {{#if message}}
+    <div class="error-message">{{message}}</div>
+    {{/if}}
+    <br>
+    <button type="submit" class="btn btn-secondary btn-login">Login</button>
+    <br>
+    <button type="submit" class="btn btn-secondary btn-login"><img class="github-btn" src="/images/github-silhouette.png"><a class="github-btn" href="/auth/github">Sign in with Github</a></button>
+  </form> --}}
