--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,14 +2,11 @@
   <h2 class="index-h2">Welcome to the Games World of Ironhack</h2>
   <p class="index-text">Here you're gonna check out the game projects from your collegues and previous students of the
     Web Development Bootcamp</p>
-<<<<<<< HEAD
 
-=======
->>>>>>> marcia
 
 
   {{!-- CAROUSEL --}}
-  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleCaptions" class="carousel slide carousel-height" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -17,21 +14,21 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/images/slider-1.jpg" class="d-block w-100" alt="...">
+        <img src="/images/slider-1.jpg" class="d-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <h5>Wanna see your game here too?</h5>
+          <p>Create your account <a href="/signup">here</a> and share your game with Ironhack Comunnity</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/images/slider-2.jpg" class="d-block w-100" alt="...">
+        <img src="/images/slider-2.jpg" class="d-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/images/slider-3.jpg" class="d-block w-100" alt="...">
+        <img src="/images/slider-3.jpg" class="d-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -51,20 +48,22 @@
 </div>
 
 
-{{#each gamesList}}
+{{!-- {{#each gamesList}}
   {{>gameCard this}}
-  {{/each}}
+  {{/each}} --}}
 
-{{!-- <div class="index-games-list">
+<div class="index-games-list">
   {{#each gamesList}}
-  <div class="card" style="width: 18rem;">
-    <img src="{{imgPath}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{title}}</h5>
-      <p class="card-text">{{author}}</p>
-      <p class="card-text">{{bootcamp}}</p>
-      <a href="{{gameUrl}}" class="btn btn-dark">Play it!</a>
+    <div class="card-distance">
+      <div class="card card-size" style="width: 18rem;">
+        <img src="/images/slider-4.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{title}}</h5>
+          <p class="card-text">Developed by {{author}}</p>
+          <p class="card-text">Bootcamp: {{bootcamp}}</p>
+          <a href="{{gameUrl}}" class="btn btn-secondary">Play Now</a>
+        </div>
+      </div>
     </div>
-  </div>
   {{/each}}
-</div> --}}
+</div>
