--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 <body>
   {{!-- NAVBAR --}}
   
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark background-blue">
   <a class="navbar-brand" href="#">Ironhack Games</a>
   <form class="form-inline my-2 my-lg-0">
       {{!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -33,14 +33,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home Page<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      {{!-- <li class="nav-item">
         <a class="nav-link" href="/gameDetail">Games</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Events</a>
-      </li>
+      </li> --}}
       <li class="nav-item dropdown">
         <a id="my-account" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           My Account
@@ -51,7 +51,7 @@
           <a class="dropdown-item" href="#">My Games</a>
           <a class="dropdown-item" href="#">My Favorite Games</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/addGame">Add a New Game</a>
+          <a class="dropdown-item" href="games/addGame">Add a New Game</a>
 
           
         </div>
