--- a/views/private.hbs
+++ b/views/private.hbs
@@ -1,9 +1,9 @@
 {{#if user}}
 <div class="private-page">
   <h1>Welcome, {{user.username}}!</h1>
+  <p>This is your private page.</p>
 
-
-  <a href="/addGame">Upload my Game</a>
+ <p>Upload your game <button><a href="games/addGame">here</a></button></p>
   
 </div>
 {{/if}}
