--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,8 +40,7 @@ footer {
   padding: 15px;
   margin: auto; }
 
-.btn-login,
-.btn-signup {
+.btn-login, .btn-signup {
   display: block;
   width: 100%; }
 
