--- a/views/editGame.hbs
+++ b/views/editGame.hbs
@@ -11,11 +11,12 @@
     </p>
     <p>
       <label for=" author">Author</label><br>
-      <input type="text" name="author " vaue="{{author}}"">
+      <input  type="text" name="author " vaue="{{author}}">
 
     </p>
     <p>
-      <textarea for=" description" rows="3" cols="80" input type="text" name="description" value="{{description}}"">Description</textarea>
+      <textarea for="description" rows="3" cols="80" input type="text" name="description"
+        value="{{description}}">Description</textarea>
     </p>
     <p>
       <label for=" Bootcamp">Your Bootcamp</label><br>
