--- a/views/gameDetail.hbs
+++ b/views/gameDetail.hbs
@@ -1,7 +1,7 @@
 <h1>{{game.title}}</h1>
 <ul>
   <!-- Open in a new window-->
-  <li> <a href="{{game.gameUrl}}">Play it!</a></li>
+  <li> <a target="_blank" href="{{game.gameUrl}}">Play it!</a></li>
   <li>Author: {{game.author}}</li>
   <li>Bootcamp: {{game.bootcamp}}</li>
   <li>Description: {{game.description}}</li>
