--- a/views/addGame.hbs
+++ b/views/addGame.hbs
@@ -6,34 +6,35 @@
   <form id="form" action="/" method="POST" enctype="multipart/form-data">
     <p>
       <label for="title">Title</label>
-      <input type="text" name="title" placeholder="Title">
+      <input required type="text" name="title" placeholder="Title">
     </p>
     <p>
       <label for="author">Author</label><br>
-      <input type="text" name="author " placeholder="Your name">
+      <input required type="text" name="author " placeholder="Your name">
 
     </p>
     <p>
-      <textarea for="description" rows="3" cols="80" input type="text" name="description">Description</textarea>
+      <textarea required for="description" rows="3" cols="80" input type="text"
+        name="description">Description</textarea>
     </p>
     <p>
       <label for="Bootcamp">Your Bootcamp</label><br>
-      <input type="text" name="bootcamp" placeholder="Month/Year">
+      <input required type="text" name="bootcamp" placeholder="Month/Year">
 
     </p>
 
     <p>
       <label for="github">Github profile</label><br>
-      <input type="text" name="githubprofile " placeholder="Your Github Name">
+      <input required type="text" name="githubprofile " placeholder="Your Github Name">
     </p>
     <p>
       <label for="author">Play link</label><br>
-      <input type="text" name="link" placeholder="Your name">
+      <input required type="text" name="link" placeholder="Your name">
     </p>
 
     <p>
       <label>Screenshot</label>
-      <input type="file" name="photo">
+      <input required type="file" name="photo">
 
     </p>
     <p>
