navbar and buttons with new styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,14 @@ footer {
   text-decoration: none;
   color: white; }
 
+.btn-secondary:hover {
+  background-color: #1f2434 !important;
+  opacity: 0.7 !important; }
+
+.btn-secondary {
+  background-color: #1f2434 !important;
+  border-color: black !important; }
+
 .index-games-list {
   display: flex;
   flex-wrap: wrap;
