--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -11,7 +11,7 @@ footer {
   align-items: center;
   font-size: smaller;
   color: white;
-  background-color: #343a40;
+  background-color: #1f2434;
 }
 
 #logout, #my-account {
