--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,12 +35,12 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Home Page<span class="sr-only">(current)</span></a>
       </li>
-      {{!-- <li class="nav-item">
-        <a class="nav-link" href="/gameDetail">Games</a>
-      </li>
       <li class="nav-item">
+        <a id="my-account" class="nav-link" href="/private">My Account</a>
+      </li>
+      {{!-- <li class="nav-item">
         <a class="nav-link" href="#">Events</a>
-      </li> --}}
+      </li>
       <li class="nav-item dropdown">
         <a id="my-account" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           My Account
@@ -55,7 +55,7 @@
 
 
         </div>
-      </li>
+      </li> --}}
     </ul>
 
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
