--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
   <h2 class="index-h2">Welcome to the Games World of Ironhack</h2>
   <p class="index-text">Here you're gonna check out the game projects from your collegues and previous students of the
     Web Development Bootcamp</p>
-    
+
   {{!-- CAROUSEL --}}
   <div id="carouselExampleCaptions" class="carousel slide carousel-height" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -52,16 +52,6 @@
 
 <div class="index-games-list">
   {{#each gamesList}}
-    <div class="card-distance">
-      <div class="card card-size" style="width: 18rem;">
-        <img src="/images/slider-4.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">{{title}}</h5>
-          <p class="card-text">Developed by {{author}}</p>
-          <p class="card-text">Bootcamp: {{bootcamp}}</p>
-          <a href="{{gameUrl}}" class="btn btn-secondary">Play Now</a>
-        </div>
-      </div>
-    </div>
+  {{>gameCardcopy this}}
   {{/each}}
 </div>
