--- a/views/partials/gameCard.hbs
+++ b/views/partials/gameCard.hbs
@@ -1,30 +1,13 @@
-<div>
-  <h2>
-    {{this.title}}
-  </h2>
+<div class="card-distance">
+  <div class="card card-size" style="width: 18rem;">
+    <img src="{{this.imgPath}}" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{this.title}}</h5>
+      <p class="card-text">Developed by {{this.author}}</p>
+      <p class="card-text">Bootcamp: {{this.bootcamp}}</p>
+      <a target="_blank" href="games/{{this._id}}" class="btn btn-secondary">EDIT</a>
 
-  <p>
-
-    Bootcamp: {{this.bootcamp}}
-
-  </p>
-
-  <p>
-
-    Athour: {{this.author}}
-
-  </p>
-
-  <p>
-    Rating: {{this.rating}}
-  </p>
-  <p>
-    <a href="games/{{this._id}}"> see details</a>
-  </p>
-
-  <p>
-    
-    <img src="{{this.imgPath}}" alt="screenshot">
-  </p>
-
+    </div>
+  </div>
 </div>
+<div></div>
