--- a/views/private.hbs
+++ b/views/private.hbs
@@ -1,30 +1,16 @@
 <div class="private-page">
   <h1>Welcome, {{user.username}}!</h1>
   <p>This is your private page.</p>
+  <p>This are your games.</p>
+  <a href="games/addGame">Add a Game</a>
+
+  <div class="index-games-list">
 
 
-  <a href="games/addGame">Upload my Game</a>
+    {{#each gamesList}}
+    {{>gameCard this}}
+    {{/each}}
 
-
-  <div>
-
-    <h2>Edit your Profile</h1>
-
-      <p>
-        Edit your Name
-      </p>
-
-      <h2>Your Gamecard</h2>
-
-
-      {{#each gamesList}}
-      {{>gameCard this}}
-      {{/each}}
-
-      <p>
-        <a href="games/addGame"> Add your Game</a>
-
-      </p>
 
   </div>
 
