--- a/views/partials/gameCardcopy.hbs
+++ b/views/partials/gameCardcopy.hbs
@@ -1,6 +1,6 @@
 <div class="card-distance">
   <div class="card card-size" style="width: 18rem;">
-    <img src="/images/slider-3.jpg" class="card-img-top" alt="...">
+    <img src="{{imgPath}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">{{title}}</h5>
       <p class="card-text">Developed by {{author}}</p>
