minor new tab fix

--- a/views/editGame.hbs
+++ b/views/editGame.hbs
@@ -10,8 +10,8 @@
       <input type="text" name="title" placeholder="{{title}}" value="{{title}}">
     </p>
     <p>
-      <label for=" author">Author</label><br>
-      <input type="text" name="author " vaue="{{author}}">
+      <label for="author">Author</label><br>
+      <input type="text" name="author " value="{{author}}">
 
     </p>
     <!-- <p>
@@ -20,18 +20,18 @@
     </p>
     -->
     <p>
-      <label for=" Bootcamp">Your Bootcamp</label><br>
+      <label for="bootcamp">Your Bootcamp</label><br>
       <input type="text" name="bootcamp" value="{{bootcamp}}">
 
     </p>
 
     <p>
-      <label for="github">Github profile</label><br>
+      <label for="githubprofile">Github profile</label><br>
       <input type="text" name="githubprofile " value="{{gitHubUrl}}">
     </p>
     <p>
-      <label for="author">Play link</label><br>
-      <input type="text" name="link" value="{{gameUrl}}">
+      <label for="gameUrl">Play link</label><br>
+      <input type="text" name="gameUrl" value="{{gameUrl}}">
     </p>
 
     <p>
