--- a/views/partials/gameCard.hbs
+++ b/views/partials/gameCard.hbs
@@ -5,7 +5,7 @@
       <h5 class="card-title">{{this.title}}</h5>
       <p class="card-text">Developed by {{this.author}}</p>
       <p class="card-text">Bootcamp: {{this.bootcamp}}</p>
-      <a target="_blank" href="games/{{this._id}}" class="btn btn-secondary">EDIT</a>
+      <a href="games/{{this._id}}" class="btn btn-secondary">EDIT</a>
 
     </div>
   </div>
