--- a/views/editGame.hbs
+++ b/views/editGame.hbs
@@ -11,7 +11,7 @@
     </p>
     <p>
       <label for="author">Author</label><br>
-      <input type="text" name="author " value="{{author}}">
+      <input type="text" name="author" value="{{author}}">
 
     </p>
     <!-- <p>
@@ -27,11 +27,11 @@
 
     <p>
       <label for="githubprofile">Github profile</label><br>
-      <input type="text" name="githubprofile " value="{{gitHubUrl}}">
+      <input type="text" name="githubprofile" value="{{gitHubUrl}}">
     </p>
     <p>
       <label for="gameUrl">Play link</label><br>
-      <input type="text" name="gameUrl" value="{{gameUrl}}">
+      <input type="text" name="link" value="{{gameUrl}}">
     </p>
 
     <p>
