--- a/views/editGame.hbs
+++ b/views/editGame.hbs
@@ -37,7 +37,8 @@
     <p>
       <label>Screenshot</label>
       <input type="file" name="photo">
-
+      <input class="hiddenImgValue" type="text" name="imgPathName" value="{{imgPath}}">
+      <input class="hiddenImgValue" type="text" name="imgNameName" value="{{imgName}}">
     </p>
     <p>
       <button type="submit" value="save">Update</button>
