--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -14,11 +14,13 @@ footer {
   background-color: #1f2434;
 }
 
-#logout, #my-account {
+#logout,
+#my-account {
   display: none;
 }
 
-#login, #signup {
+#login,
+#signup {
   display: block;
 }
 
@@ -31,7 +33,8 @@ footer {
   font-size: smaller;
 }
 
-.login-page, .signup-page {
+.login-page,
+.signup-page {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -46,7 +49,8 @@ footer {
   margin: auto;
 }
 
-.btn-login, .btn-signup {
+.btn-login,
+.btn-signup {
   display: block;
   width: 100%;
 }
@@ -73,7 +77,7 @@ footer {
 }
 
 .btn-secondary {
-  background-color:#1f2434 !important;
+  background-color: #1f2434 !important;
   border-color: black !important;
 }
 
@@ -81,14 +85,13 @@ footer {
   display: flex;
   flex-wrap: wrap;
   place-content: space-around;
-  margin: 50px 50px 0px
+  margin: 50px 50px 0px;
 }
 
 .index-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 
 .index-text {
@@ -138,4 +141,8 @@ footer {
 
 .background-blue {
   background-color: rgb(45, 197, 250);
+}
+
+.hiddenImgValue {
+  display: none;
 }
