style for the game detail page and private page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,4 +108,11 @@ footer {
 .background-blue {
   background-color: #2dc5fa; }
 
+.game-detail-btns {
+  display: flex; }
+
+.game-detail-edit-btn {
+  margin: 0px 30px 0px;
+  width: 5%; }
+
 /*# sourceMappingURL=style.css.map */
