--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -23,7 +23,7 @@
   <br>
   <p class="create-account-message">
         Don't have an account yet?
-      <a href="/signup">Create account</a>
+      <a href="/signup">Create an account</a>
   </p>
   
 </div>
