--- a/views/editGame.hbs
+++ b/views/editGame.hbs
@@ -1,52 +1,31 @@
 <div>
-
-
   <h2>Edit your game</h2>
 
   {{#with game}}
-  <form id="form" action="/games/edit/{{_id}}" method="POST" enctype="multipart/form-data">
-    <p>
-      <label for="title">Title</label>
-      <input type="text" name="title" placeholder="{{title}}" value="{{title}}">
-    </p>
-    <p>
-      <label for=" author">Author</label><br>
-      <input  type="text" name="author " vaue="{{author}}">
+    <form id="form" action="/games/edit/{{_id}}" method="POST" enctype="multipart/form-data">
+      <p><label for="title">Title</label>
+        <input type="text" name="title" placeholder="{{title}}" value="{{title}}"></p>
 
-    </p>
-    <p>
-      <textarea for="description" rows="3" cols="80" input type="text" name="description"
-        value="{{description}}">Description</textarea>
-    </p>
-    <p>
-      <label for=" Bootcamp">Your Bootcamp</label><br>
-      <input type="text" name="bootcamp" value="{{bootcamp}}">
+      <p><label for=" author">Author</label><br>
+        <input  type="text" name="author " vaue="{{author}}"></p>
 
-    </p>
+      <p><textarea for="description" rows="3" cols="80" input type="text" name="description"
+          value="{{description}}">Description</textarea></p>
 
-    <p>
-      <label for="github">Github profile</label><br>
-      <input type="text" name="githubprofile " value="{{gitHubUrl}}">
-    </p>
-    <p>
-      <label for="author">Play link</label><br>
-      <input type="text" name="link" value="{{gameUrl}}">
-    </p>
+      <p><label for=" Bootcamp">Your Bootcamp</label><br>
+        <input type="text" name="bootcamp" value="{{bootcamp}}"></p>
 
-    <p>
-      <label>Screenshot</label>
-      <input type="file" name="photo">
+      <p><label for="github">Github profile</label><br>
+        <input type="text" name="githubprofile " value="{{gitHubUrl}}"></p>
+        
+      <p><label for="author">Play link</label><br>
+        <input type="text" name="link" value="{{gameUrl}}"></p>
 
-    </p>
-    <p>
-      <button type="submit" value="save">Update</button>
-    </p>
+      <p><label>Screenshot</label>
+        <input type="file" name="photo"></p>
+      <p><button type="submit" value="save">Update</button></p>
 
-
-
-  </form>
+    </form>
   {{/with}}
-
-
 
 </div>
