--- a/views/partials/gameCard.hbs
+++ b/views/partials/gameCard.hbs
@@ -1,30 +1,13 @@
 <div>
-  <h2>
-    {{this.title}}
-  </h2>
+  <h2>{{this.title}}</h2>
 
-  <p>
+  <p>Bootcamp: {{this.bootcamp}}</p>
 
-    Bootcamp: {{this.bootcamp}}
+  <p>Developed by: {{this.author}}</p>
 
-  </p>
+  <p>Rating: {{this.rating}}</p>
+  
+  <p><a href="games/{{this._id}}">See details</a></p>
 
-  <p>
-
-    Athour: {{this.author}}
-
-  </p>
-
-  <p>
-    Rating: {{this.rating}}
-  </p>
-  <p>
-    <a href="games/{{this._id}}"> see details</a>
-  </p>
-
-  <p>
-    
-    <img src="{{this.imgPath}}" alt="screenshot">
-  </p>
-
+  <p><img src="{{this.imgPath}}" alt="screenshot"></p>
 </div>
