few minor changes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,4 +122,7 @@ footer {
   margin: 0px 30px 0px;
   width: 5%; }
 
+.login-link-already-account {
+  margin-top: 1rem; }
+
 /*# sourceMappingURL=style.css.map */
