--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,156 +1,160 @@
 body {
-  margin: 90px 0px 0px;
-  padding: 0px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin: 90px 0px 0px;
+    padding: 0px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 footer {
-  height: 3vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: smaller;
-  color: white;
-  background-color: #1f2434;
+    height: 3vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: smaller;
+    color: white;
+    background-color: #1f2434;
 }
 
 #logout,
 #my-account {
-  display: none;
+    display: none;
 }
 
 #login,
 #signup {
-  display: block;
+    display: block;
 }
 
 .form-group {
-  width: 300px;
+    width: 300px;
 }
 
 .error-message {
-  color: red;
-  font-size: smaller;
+    color: red;
+    font-size: smaller;
 }
 
 .login-page,
 .signup-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 10vw 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10vw 0px;
 }
 
 .form-signin {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: auto;
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
 }
 
 .btn-login,
 .btn-signup {
-  display: block;
-  width: 100%;
+    display: block;
+    width: 100%;
 }
 
 .github-btn {
-  text-decoration: none;
-  color: white;
-  width: 10%;
-  // left: 16px;
-  // position: absolute;
-  // height: 90%;
-  // top: -0.378rem;
-  // height: 140%;
+    text-decoration: none;
+    color: white;
+    width: 10%;
+    // left: 16px;
+    // position: absolute;
+    // height: 90%;
+    // top: -0.378rem;
+    // height: 140%;
 }
 
 .github-btn:hover {
-  text-decoration: none;
-  color: white;
+    text-decoration: none;
+    color: white;
 }
 
 .btn-secondary:hover {
-  background-color: #1f2434 !important;
-  opacity: 0.7 !important;
+    background-color: #1f2434 !important;
+    opacity: 0.7 !important;
 }
 
 .btn-secondary {
-  background-color: #1f2434 !important;
-  border-color: black !important;
+    background-color: #1f2434 !important;
+    border-color: black !important;
 }
 
 .index-games-list {
-  display: flex;
-  flex-wrap: wrap;
-  place-content: space-around;
-  margin: 50px 50px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    place-content: space-around;
+    margin: 50px 50px 0px;
 }
 
 .index-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .index-text {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .card-distance {
-  margin: 0px 0px 50px;
+    margin: 0px 0px 50px;
 }
 
 #main-wrapper {
-  min-height: 90vh;
+    min-height: 90vh;
 }
 
 .carousel-height {
-  height: 60vh;
+    height: 60vh;
 }
 
 #carouselExampleCaptions img {
-  height: 60vh;
-  width: 100%;
+    height: 60vh;
+    width: 100%;
 }
 
 #carouselExampleCaptions {
-  width: 90vw;
+    width: 90vw;
 }
 
 .card-size {
-  height: 100%;
+    height: 100%;
 }
 
 .card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .card-body a {
-  align-self: flex-end;
+    align-self: flex-end;
 }
 
 .card-body img {
-  width: 100%;
-  height: 20vh;
-  object-fit: cover;
+    width: 100%;
+    height: 20vh;
+    object-fit: cover;
 }
 
 .background-blue {
-  background-color: rgb(45, 197, 250);
+    background-color: rgb(45, 197, 250);
 }
 
 .hiddenImgValue {
-  display: none;
+    display: none;
 }
 .game-detail-btns {
-  display: flex;
+    display: flex;
 }
 
 .game-detail-edit-btn {
-  margin: 0px 30px 0px;
-  width: 5%;
+    margin: 0px 30px 0px;
+    width: 5%;
+}
+
+.login-link-already-account {
+    margin-top: 1rem;
 }
