--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,8 @@
 <div class="index-page">
-  <h2 class="index-h2">Welcome to the Games World of Ironhack</h2>
-  <p class="index-text">Here you're gonna check out the game projects from your collegues and previous students of the
-    Web Development Bootcamp</p>
+  <h1 class="index-h2">Welcome to the Game World of Ironhack Students</h1>
+  <h4 class="index-text">Feel free to explore your fellow Ironhack students' projects. Enjoy!</h4>
+  <p class="index-text">Wanna see your game here too?
+  <p>Create your account <a href="/signup">here</a> and share your game with the Ironhack Students' Community</p>
 
   {{!-- CAROUSEL --}}
   <div id="carouselExampleCaptions" class="carousel slide carousel-height" data-ride="carousel">
@@ -14,22 +15,22 @@
       <div class="carousel-item active">
         <img src="/images/slider-1.jpg" class="d-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Wanna see your game here too?</h5>
-          <p>Create your account <a href="/signup">here</a> and share your game with Ironhack Comunnity</p>
+          {{!-- <h5>Wanna see your game here too?</h5> --}}
+          {{!-- <p>Create your account <a href="/signup">here</a> and share your game with Ironhack Comunnity</p> --}}
         </div>
       </div>
       <div class="carousel-item">
         <img src="/images/slider-2.jpg" class="d-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          {{!-- <h5>Second slide label</h5> --}}
+          {{!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> --}}
         </div>
       </div>
       <div class="carousel-item">
         <img src="/images/slider-3.jpg" class="d-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          {{!-- <h5>Third slide label</h5> --}}
+          {{!-- <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p> --}}
         </div>
       </div>
     </div>
