--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -82,7 +82,7 @@
 
 
   <footer>
-    <div>Ironhack WebDev Project March/2020 | Webmasters: Benjamin Chimoy, Marcia Furtado, Sam Benhassine  </div>
+    <div>Ironhack WebDev Project March/2020 | Webmasters: Benjamin Chimoy, Marcia Furtado, Sami Ben Hassine</div>
   </footer>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js'></script>
