--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -5,7 +5,7 @@ body {
 }
 
 footer {
-  height: 3vh;
+  height: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,11 +59,14 @@ footer {
   text-decoration: none;
   color: white;
   width: 10%;
-  // left: 16px;
-  // position: absolute;
-  // height: 90%;
-  // top: -0.378rem;
-  // height: 140%;
+  margin: 0px 10px 0px;
+}
+
+.github-btn img{
+  position: relative;
+  left: -20px;
+  top: -1px;
+  margin-right: 22px;
 }
 
 .github-btn:hover {
@@ -181,3 +184,20 @@ ul {
   justify-content: space-around;
 }
 
+.game-detail-a {
+  text-decoration: none;
+  color: white;
+}
+
+.game-detail-a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.game-detail-header {
+  margin-bottom: 20px;
+}
+
+// .game-detail-page ul li {
+//   margin-top: 23px;
+// }
