--- a/views/partials/gameCardcopy.hbs
+++ b/views/partials/gameCardcopy.hbs
@@ -5,7 +5,7 @@
       <h5 class="card-title">{{title}}</h5>
       <p class="card-text">Developed by {{author}}</p>
       <p class="card-text">Bootcamp: {{bootcamp}}</p>
-      <a target="_blank" href="{{gameUrl}}" class="btn btn-secondary">Play Now</a>
+      <a href="{{gameUrl}}" target="_blank" class="btn btn-secondary">Play</a>
     </div>
   </div>
 </div>
