--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -198,6 +198,17 @@ ul {
   margin-bottom: 20px;
 }
 
-// .game-detail-page ul li {
-//   margin-top: 23px;
-// }
+.game-detail-goback-btn {
+  margin-left: 3px;
+}
+
+.game-edit-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 5px;
+}
+
+.game-edit-play-btn {
+  margin-right: 10px;
+}
