--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,14 +12,16 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/images/slider-1.jpg" class="d-block" alt="...">
+        <img
+          src="https://res.cloudinary.com/benchberlin/image/upload/v1588268112/ironhack-games/Bildschirmfoto%202020-04-27%20um%2022.29.30.png"
+          class="d-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Wanna see your game here too?</h5>
           <p>Create your account <a href="/signup">here</a> and share your game with Ironhack Comunnity</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/images/slider-2.jpg" class="d-block" alt="...">
+        <img src="{{gamesList.[].imgPath}}" class="d-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
