--- a/views/partials/gameCard.hbs
+++ b/views/partials/gameCard.hbs
@@ -6,8 +6,7 @@
       <p class="card-text">Developed by {{this.author}}</p>
       <p class="card-text">Bootcamp: {{this.bootcamp}}</p>
       <a href="games/{{this._id}}" class="btn btn-secondary">EDIT</a>
-
+      <a target="_blank" href="{{this.gameUrl}}" class="btn btn-secondary">PLAY</a>
     </div>
   </div>
 </div>
-<div></div>
