--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,36 +9,40 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="icon" type="image/png"
+    href="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/4017/s300/logo-ironhack-blue.png">
 </head>
 
 <body>
   {{!-- NAVBAR --}}
-  
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark background-blue">
-  <a class="navbar-brand" href="#">Ironhack Games</a>
-  <form class="form-inline my-2 my-lg-0" method="POST" action="/search-bar-handler">
+
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark background-blue">
+    <a class="navbar-brand" href="#">Ironhack Games</a>
+    <form class="form-inline my-2 my-lg-0" method="POST" action="/search-bar-handler">
       {{!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> --}}
       {{!-- <div class="input-group mb-3"> --}}
-        <input type="search" name="searchBar" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
-        <div class="input-group-append">
-          <button class="btn btn-secondary" type="submit" id="button-addon2">Search</button>
-        </div>
+      <input type="search" name="searchBar" class="form-control" placeholder="Search" aria-label="Search"
+        aria-describedby="button-addon2">
+      <div class="input-group-append">
+        <button class="btn btn-secondary" type="submit" id="button-addon2">Search</button>
+      </div>
       {{!-- </div> --}}
     </form>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home Page<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a id="my-account" class="nav-link" href="/private">My Account</a>
-      </li>
-      {{!-- <li class="nav-item">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home Page<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a id="my-account" class="nav-link" href="/private">My Account</a>
+        </li>
+        {{!-- <li class="nav-item">
         <a class="nav-link" href="#">Events</a>
       </li>
       <li class="nav-item dropdown">
@@ -56,33 +60,33 @@
 
         </div>
       </li> --}}
-    </ul>
+      </ul>
 
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-      <div class="btn-group mr-2" role="group" aria-label="First group" id="signup">
-        <a href="/signup"><button type="button" class="btn btn-secondary">Sign Up</button></a>
+      <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group mr-2" role="group" aria-label="First group" id="signup">
+          <a href="/signup"><button type="button" class="btn btn-secondary">Sign Up</button></a>
+        </div>
+        <div class="btn-group mr-2" role="group" aria-label="Second group" id="login">
+          <a href="/login"><button type="button" class="btn btn-outline-light">Login</button></a>
+        </div>
+        <div class="btn-group mr-2" role="group" aria-label="Second group" id="logout">
+          <a href="/logout"><button type="button" class="btn btn-outline-light">Logout</button></a>
+        </div>
       </div>
-      <div class="btn-group mr-2" role="group" aria-label="Second group" id="login">
-        <a href="/login"><button type="button" class="btn btn-outline-light">Login</button></a>
-      </div>
-      <div class="btn-group mr-2" role="group" aria-label="Second group" id="logout">
-        <a href="/logout"><button type="button" class="btn btn-outline-light">Logout</button></a>
-      </div>
+
     </div>
+  </nav>
+  {{!-- NAVBAR END --}}
 
+  <div id="main-wrapper">
+    {{{body}}}
   </div>
-</nav>
-{{!-- NAVBAR END --}}
-
-<div id="main-wrapper">
-  {{{body}}}
-</div>
 
 
 
 
   <footer>
-    <div>Ironhack WebDev Project March/2020 | Webmasters: Benjamin Chimoy, Marcia Furtado, Sam Benhassine  </div>
+    <div>Ironhack WebDev Project March/2020 | Webmasters: Benjamin Chimoy, Marcia Furtado, Sam Benhassine </div>
   </footer>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js'></script>
